options_alpha/logs/run_1777910160.log
18:56:01 [INFO] === Options Trading Alpha Engine ===
18:56:01 [INFO] Старт: 2026-05-04 18:56:01
18:56:01 [INFO] Конфиг загружен: config_live.json
18:56:04 [INFO] --- Switching to FORCAST pipeline mode ---
Traceback (most recent call last):
  File "C:\Project\Option Analitik\options_alpha\main_pipeline.py", line 528, in <module>
    sys.exit(main())
             ~~~~^^
  File "C:\Project\Option Analitik\options_alpha\main_pipeline.py", line 519, in main
    return run_pipeline(
        config_path=args.config,
    ...<2 lines>...
        audit=args.audit,
    )
  File "C:\Project\Option Analitik\options_alpha\main_pipeline.py", line 161, in run_pipeline
    from pipelines.forecast_pipeline import ForecastPipeline
  File "C:\Project\Option Analitik\options_alpha\pipelines\forecast_pipeline.py", line 112
    day_ts = merged.iloc[idx]["timestamp"]
    ^^^^^^
IndentationError: expected an indented block after 'for' statement on line 111
